--- a/index.html
+++ b/index.html
@@ -63,7 +63,11 @@
 
     <div class="link-yazi">
       <a target="_blank" href="https://t.me/BWIFsolana">Telegram</a>
-      <a target="_blank" href="twitterlink">Twitter</a>
+      <a
+        target="_blank"
+        href="https://solscan.io/token/BhagYgSBZpTY74WG6XzFCHDJPVvhLAtkceEEAwrKtY19"
+        >Solscan</a
+      >
       <a
         target="_blank"
         href="https://dexscreener.com/solana/6ycgpjmggeyhzd546ng1znvv6dzt8pz8cl7cnyfiar1k"
