--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
     <video
       id="arkaPlanVideo"
-      src="background.mp4"
+      src=""
       style="
         position: center;
         top: 0;
@@ -60,6 +60,7 @@
         display: none;
       "
     ></video>
+    <img src="" alt="" />
 
     <div class="link-yazi">
       <a target="_blank" href="https://t.me/BWIFsolana">Telegram</a>
